Pequeñas mejoras en codigo agregadas

--- a/apps/autenticacion/templates/autenticacion/auth/login.html
+++ b/apps/autenticacion/templates/autenticacion/auth/login.html
@@ -78,6 +78,10 @@
                             <label for="{{ form.password.id_for_label }}" class="block text-sm font-medium text-gray-700">
                                 {{ form.password.label }}
                             </label>
+                            <a href="{% url 'auth:password_recovery_request' %}" 
+                               class="text-sm font-medium text-primary-600 hover:text-primary-500 transition-colors">
+                                ¿Olvidaste tu contraseña?
+                            </a>
                         </div>
                         <div class="mt-1 relative rounded-md shadow-sm">
                             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
